# react-code-editor

./: IMPLEMENTATION_NOTES.md  README.md  dev-app-update.yml  electron-builder.yml  electron.vite.config.mjs  package-lock.json  package.json
backend/compiler/: 03_loops_and_conditions  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LLVM_COMPILATION.md  QUICKSTART.md  TEST_RESULTS.md  build.rs  build_dreamcc.sh  calculator  calculator.drc  fibonacci  fibonacci.drc  fibonacci_interactive  fibonacci_interactive.drc  hello  hello.drc  input_test  input_test.drc  test_print  test_print.drc
backend/compiler/proto/: ast.proto  parser.proto  semantic.proto
backend/compiler/src/: ast.rs  dreamcc.rs  grpc_lexer.rs  grpc_parser.rs  grpc_services.rs  lexer.rs  lib.rs  llvm_compiler.rs  main.rs  parser.rs  reflection.rs  semantic_analyzer.rs  symbol_table.rs  token.rs
backend/compiler/test_programs/: 01_basic_arithmetic.drc  02_factorial.drc  03_loops_and_conditions.drc  04_max_min.drc  05_sum_series.drc
backend/compiler/tests/: integration_tests.rs  llvm_integration_tests.rs
backend/compiler/tests/cases/: 01_simple_let.dreamc  02_functions.dreamc  03_syntax_error.dreamc
backend/compiler/tests/snapshots/: integration_tests__run_snapshot_test-2.snap  integration_tests__run_snapshot_test-3.snap  integration_tests__run_snapshot_test-3.snap.new  integration_tests__run_snapshot_test.snap.new
protos/: compilador.proto  lexer.proto  parser.proto  semantic.proto
src/main/: grpcClient.js  index.js
src/preload/: index.js
test/: semantic.dc  semantic_errors.dc
(+19 files in other folders)
